--- a/src/Sql/Sql/Sql.csproj
+++ b/src/Sql/Sql/Sql.csproj
@@ -28,6 +28,8 @@
     <PackageReference Include="System.Security.Permissions" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Accounts\Accounts\Accounts.csproj" />
+    <ProjectReference Include="..\Sql.Helpers\Sql.Helpers.csproj" />
     <ProjectReference Include="..\Sql.LegacySdk\Sql.LegacySdk.csproj" />
     <ProjectReference Include="..\Sql.Sdk\Sql.Sdk.csproj" />
   </ItemGroup>
